# Derma-ai

./: .env  Readme.md  main.py  pyproject.toml  requirements.txt  run_backend.py  setup_project.py
backend/: api.py  app.py  models.py  rag_pipeline.py
frontend/: README.md  index.html  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: ChatInterface.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  MedicalDisclaimer.tsx  ProductResearch.tsx  SkinProfileSummary.tsx  SkinQuestionnaire.tsx
frontend/src/pages/: Index.tsx
frontend/src/types/: skin.ts
utils/: document_processor.py  vector_store.py
